@@ -15,7 +15,12 @@ For a detailed view of what has changed, refer to the {uri-repo}/commits/master[
 * IO object can be used as value of :to option in `convert` and `convert_file` (#43)
 * intermediate directories are now created in `convert` instead of `convert_file` (#45)
 * `convert_file` now writes output file using explicit UTF-8 encoding (#46)
+* prevent `convert_file` from using input file as implicit output file
 * allow library to be required via alias `kramdoc`
+
+=== Changed
+
+* consolidated logic in CLI by further delegating to API
 
 == 1.0.0.alpha.11 (2018-08-02) - @mojavelinux
 
